# fast_c2pa_python

./: .gitignore  Cargo.toml  Makefile  README.md  benchmark_c2pa_python.py  benchmark_fastc2pa.py  blog_1.ipynb  example.py  pyproject.toml  run_tests.py
.github/workflows/: cross_platform_tests.yml  release.yml
fast_c2pa_python/: __init__.py
src/: c2pa_reader.rs  lib.rs  mime_utils.rs  utils.rs
tests/: requirements.txt  test_api.py  test_performance.py
tests/test_images/: adobe_firefly_image_createdate.jpg_original
