[package]
name = "fast_c2pa_reader"
version = "0.1.0"
edition = "2021"

[lib]
name = "fast_c2pa_reader"
crate-type = ["cdylib"]

[dependencies]
c2pa = { version = "0.49.5", features = ["file_io"] }
pyo3 = { version = "0.19.0", features = ["extension-module"] }
serde_json = "1.0"

# Optimize for performance in release builds
[profile.release]
opt-level = 3           # Maximum optimization
lto = "fat"             # Link-time optimization
codegen-units = 1       # Slower build, better optimization
panic = "abort"         # Remove unwinding code
strip = true            # Strip symbols from binary
debug = false           # No debug info 