[package]
name = "fast-c2pa-python"
version = "0.1.0"
edition = "2021"
authors = ["Sightengine <info@sightengine.com>"]
license = "MIT OR Apache-2.0"
description = "Fast Python library for reading C2PA metadata using PyO3 bindings to c2pa-rs"
keywords = ["c2pa", "metadata", "python", "bindings"]

[lib]
name = "fast_c2pa_core"
crate-type = ["cdylib"]

[dependencies]
c2pa = { version = "0.49.5", features = ["file_io"] }
pyo3 = { version = "0.19.0", features = ["extension-module"] }
serde_json = "1.0"
log = "0.4"
image = "0.25.6"

# Optimize for performance in release builds
[profile.release]
opt-level = 3           # Maximum optimization
lto = "fat"             # Link-time optimization
codegen-units = 1       # Slower build, better optimization
panic = "abort"         # Remove unwinding code
strip = true            # Strip symbols from binary
debug = false           # No debug info 
