[build-system]
requires = ["maturin>=1.8.3"]
build-backend = "maturin"

[project]
name = "fast-c2pa-python"
version = "0.1.1"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[tool.maturin]
features = ["pyo3/extension-module"] 