[build-system]
requires = ["maturin>=1.8.3"]
build-backend = "maturin"

[project]
name = "fast-c2pa-python"
version = "0.1.4"
description = "Fast Python library for reading C2PA metadata using PyO3 bindings to c2pa-rs"
authors = [{name = "Sightengine", email = "info@sightengine.com"}]
license = {text = "MIT OR Apache-2.0"}
readme = "README.md"
keywords = ["c2pa", "metadata", "python", "bindings"]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
]

[tool.maturin]
features = ["pyo3/extension-module"] 