[build-system]
requires = ["maturin>=1.8.3"]
build-backend = "maturin"

[project]
name = "fast-c2pa-python"
version = "0.1.8"
description = "Fast Python library for reading C2PA metadata using PyO3 bindings to c2pa-rs"
authors = [{name = "Sightengine", email = "info@sightengine.com"}]
license = {text = "MIT OR Apache-2.0"}
readme = "README.md"
keywords = ["c2pa", "metadata", "python", "bindings"]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/Sightengine/fast_c2pa_python"
Repository = "https://github.com/Sightengine/fast_c2pa_python"
Issues = "https://github.com/Sightengine/fast_c2pa_python/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
python-packages = ["fast_c2pa_python"] 
